# simple3d

./: CMakeLists.txt  main.cpp  minray.cpp  raytracer.cpp  render.cpp  render_sdl.cpp
